DZ8/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rvm-dz8-shopping-service
spec:
  selector:
    app: dz8-shopping
  ports:
    - protocol: TCP
      port: 8080
      targetPort: web
  type: NodePort
